refactor(AccountDetails):Changed how account creation date is displayed

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.44.2",
     "autoprefixer": "^10.4.19",
+    "date-fns": "^3.6.0",
     "faker": "^5.5.3",
     "framer-motion": "^11.2.13",
     "i18next": "^23.11.5",
