--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.44.2",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "faker": "^5.5.3",
-    "framer-motion": "^11.2.13",
+    "framer-motion": "^11.3.2",
     "i18next": "^23.11.5",
     "next": "14.2.4",
     "next-i18next": "^15.3.0",
@@ -35,7 +39,8 @@
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
