--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@react-three/drei": "^9.108.4",
+    "@react-three/fiber": "^8.16.8",
     "@reduxjs/toolkit": "^2.2.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.44.2",
@@ -42,7 +44,8 @@
     "react-redux": "^9.1.2",
     "react-sticky-el": "^2.1.0",
     "redux-saga": "^1.3.0",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^2.4.0",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
