--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "faker": "^5.5.3",
-    "framer-motion": "^11.3.2",
+    "framer-motion": "^11.3.17",
     "i18next": "^23.11.5",
     "next": "14.2.4",
     "next-i18next": "^15.3.0",
@@ -42,7 +42,9 @@
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-redux": "^9.1.2",
+    "react-scroll": "^1.9.0",
     "react-sticky-el": "^2.1.0",
+    "react-use": "^17.5.1",
     "redux-saga": "^1.3.0",
     "tailwind-merge": "^2.4.0",
     "three": "^0.166.1"
