--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@react-three/drei": "^9.108.4",
-    "@react-three/fiber": "^8.16.8",
     "@reduxjs/toolkit": "^2.2.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.44.2",
@@ -28,6 +26,7 @@
     "date-fns": "^3.6.0",
     "faker": "^5.5.3",
     "framer-motion": "^11.3.17",
+    "gsap": "^3.12.5",
     "i18next": "^23.11.5",
     "next": "14.2.4",
     "next-i18next": "^15.3.0",
@@ -46,6 +45,7 @@
     "react-sticky-el": "^2.1.0",
     "react-use": "^17.5.1",
     "redux-saga": "^1.3.0",
+    "scrollmagic": "^2.0.8",
     "tailwind-merge": "^2.4.0",
     "three": "^0.166.1"
   },
